fix: add missing colors

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -70,6 +70,11 @@
 	// Container
 	--container-width: 80rem;
 
+	// Brand colors
+	--bg-discord: hsl(235, 86%, 65%);
+	--bg-discord-hover: hsl(235, 83%, 64%);
+	--fg-discord: #ffffff;
+
 	// Colors
 	--bg-app: var(--neutral-1);
 	--bg-app-subtle: var(--neutral-2);
